<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#00000000">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="300.0dip"
        android:background="@drawable/part"
        android:gravity="center"
	android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imei" />

            <TextView
                android:id="@+id/valueimei"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
	</LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phonetype" />

            <TextView
                android:id="@+id/valuephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/networktype" />

            <TextView
                android:id="@+id/valuenetwork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simoper" />

            <TextView
                android:id="@+id/simoper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="80.0dip"
        android:layout_marginTop="20.0dip"
        android:background="@+drawable/part"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/failed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="65.0dip"
            android:text="@string/failed"
            android:textSize="27.0sp"
            android:width="95.0dip" />

        <Button
            android:id="@+id/successed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50.0dip"
            android:height="65.0dip"
            android:text="@string/successed"
            android:textSize="27.0sp"
            android:width="95.0dip" />
    </LinearLayout>
    
</LinearLayout>
