<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@color/white">

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/title" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_normal_test"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_list_item"
            android:button="@null"
            android:drawableTop="@drawable/normal_test"
            android:gravity="center_horizontal"
            android:text="@string/action_home_nornal_test" />

        <RadioButton
            android:id="@+id/radio_scan_test"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_list_item"
            android:button="@null"
            android:drawableTop="@drawable/barcode_test"
            android:gravity="center_horizontal"
            android:text="@string/action_home_scan" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_bluetooth"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_list_item"
            android:button="@null"
            android:drawableTop="@drawable/bluetooth_test"
            android:gravity="center_horizontal"
            android:text="@string/action_home_bluetooth" />

        <RadioButton
            android:id="@+id/radio_wifi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_list_item"
            android:button="@null"
            android:drawableTop="@drawable/wifi_test"
            android:gravity="center_horizontal"
            android:text="@string/action_home_wifi" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_gps"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_list_item"
            android:button="@null"
            android:drawableTop="@drawable/gps_test"
            android:gravity="center_horizontal"
            android:text="@string/action_home_gps" />

        <RadioButton
            android:id="@+id/radio_home_nfc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_list_item"
            android:button="@null"
            android:drawableTop="@drawable/nfc_test"
            android:gravity="center_horizontal"
            android:text="@string/action_home_nfc" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_home_voice"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_list_item"
            android:button="@null"
            android:drawableTop="@drawable/sound_test"
            android:gravity="center_horizontal"
            android:text="@string/action_home_voice_set" />

        <RadioButton
            android:id="@+id/radio_home_bright"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_list_item"
            android:button="@null"
            android:drawableTop="@drawable/bright_test"
            android:gravity="center_horizontal"
            android:text="@string/action_home_bright_set" />
    </LinearLayout>

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/bottom" />

</LinearLayout>