<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="CC3310Demo"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_show_message"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:background="@drawable/bg_edittext_focused" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_active"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_rectangle"
                android:gravity="center"
                android:text="@string/btn_enable_card"
                android:textSize="13dp" />

            <Button
                android:id="@+id/btn_get_ramdon"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_rectangle"
                android:gravity="center"
                android:text="@string/btn_send_random"
                android:textSize="13dp" />

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_rectangle"
                android:gravity="center"
                android:text="@string/btn_send_clear"
                android:textSize="13dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/edv_adpu_cmd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit"
            android:digits="abcdef0123456789"
            android:hint="@string/hint_input_cmd"
            android:textSize="20dp" >
        </EditText>

        <Button
            android:id="@+id/btn_send_adpu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button_rectangle"
            android:gravity="center"
            android:text="@string/btn_send"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>